--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Run tests
         run: |
           cd main
+          export PYTHONPATH=$(pwd)
           pytest
 
       - name: Build Docker image
